--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -39,6 +39,16 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+
+  /* custom colors */
+  --color-oz-purple-light: #efe6fc;
+  --color-oz-purple: #6201e0;
+  --color-oz-purple-deep: #4e01b3;
+  --color-oz-purple-dark: #3b0186;
+
+  --color-oz-gray-white: #ececec;
+  --color-oz-gray-light: #cecece;
+  --color-oz-gray-dark: #4d4d4d;
 }
 
 :root {
