feat: 버튼, 인풋 공통 컴포넌트 개발(#10)
- 컬러값 변수 적용

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@
 
   --color-oz-gray-white: #ececec;
   --color-oz-gray-light: #cecece;
+  --color-oz-gray-soft: #bdbdbd;
   --color-oz-gray-dark: #4d4d4d;
 }
 
