feat: textarea, dialog, card

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,7 @@
   --color-sidebar-ring: var(--sidebar-ring);
 
   /* custom colors */
+  --color-oz-purple-white: #f7f2ff;
   --color-oz-purple-light: #efe6fc;
   --color-oz-purple: #6201e0;
   --color-oz-purple-deep: #4e01b3;
