--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@
   --color-oz-gray-light: #cecece;
   --color-oz-gray-soft: #bdbdbd;
   --color-oz-gray-dark: #4d4d4d;
+  --color-oz-gray-black: #303030;
 }
 
 :root {
