--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@
   --color-oz-gray-white: #ececec;
   --color-oz-gray-light: #cecece;
   --color-oz-gray-soft: #bdbdbd;
+  --color-oz-gray-white-dark: #707070;
   --color-oz-gray-dark: #4d4d4d;
   --color-oz-gray-black: #303030;
 }
