add custom color

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
   /* custom colors */
   --color-oz-purple-white: #f7f2ff;
   --color-oz-purple-light: #efe6fc;
+  --color-oz-purple-medium: #d0b3f6;
   --color-oz-purple: #6201e0;
   --color-oz-purple-deep: #4e01b3;
   --color-oz-purple-dark: #3b0186;
@@ -50,6 +51,7 @@
   --color-oz-gray-white: #ececec;
   --color-oz-gray-light: #cecece;
   --color-oz-gray-soft: #bdbdbd;
+  --color-oz-gray: #9d9d9d;
   --color-oz-gray-white-dark: #707070;
   --color-oz-gray-dark: #4d4d4d;
   --color-oz-gray-black: #303030;
